lox-tests/tests/function/too_many_arguments.stderr
ERROR: Cannot have more than 255 arguments in function call
  --> 4:3
   |
4  |   foo(
   |   ^---
5  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
6  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
7  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
8  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
9  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
10 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
11 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
12 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
13 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
14 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
15 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
16 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
17 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
18 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
19 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
20 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a);
   | --------------------------------------------------^


ERROR: Expected 0 arguments in function call but got 256
  --> 4:3
   |
4  |   foo(
   |   ^---
5  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
6  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
7  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
8  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
9  |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
10 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
11 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
12 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
13 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
14 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
15 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
16 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
17 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
18 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
19 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a,
   | ---------------------------------------------------
20 |     a, a, a, a, a, a, a, a, a, a, a, a, a, a, a, a);
   | --------------------------------------------------^
